# doc-finder

./: .env.example  .gitignore  README.md  pyproject.toml
assets/tag/: static-tags.json
docs/: doc_finder_project_draft.md  doc_finder_project_overview.md  doc_finder_project_summary.md  gemma4_local_doc_finder_cli.md  gemma4_server_machine_cli.md
docs/plans/: 2026-04-06-fastapi-first-text-search.md  2026-04-06-fastapi-wrapper.md  2026-04-06-main-server-entrypoint.md  2026-04-09-florence2-local-tagger.md  2026-04-13-finetune-florence2-prep.md  2026-04-13-florence2-layout-refactor.md  2026-04-15-tagger-provider-decoupling.md
http/: doc-finder.http
models/finetune_florence_2/: README.md
models/finetune_florence_2/docs/: 2026-04-13-hf-blog-adaptation.md  2026-04-13-roadmap.md
models/finetune_florence_2/templates/: geotag_dataset.sample.jsonl  label_taxonomy.example.yaml  phase_checklist.md  searchtag_dataset.sample.jsonl
models/florence_2/: README.md
models/florence_2/docs/: 2026-04-09-tagging-session-log.md
models/florence_2_tuning/: README.md  __init__.py  dataset.py  metrics.py  training.py
models/paligemma_2/: README.md
scripts/: apply_white_background_to_png_assets.py  convert_svg_assets_to_png.py
src/doc_finder/: __init__.py  api.py  app.py  bootstrap.py  cli.py  graph.py  main.py
src/doc_finder/api/: router.py
src/doc_finder/graphs/: search_graph.py
src/doc_finder/models/: __init__.py
src/doc_finder/repositories/: __init__.py  image_index.py
src/doc_finder/schemas/: search.py
src/doc_finder/services/: embedding_service.py  filename_parser.py  florence2_tagger.py  (+12 more)
tests/: test_api.py  test_cli.py  test_filename_parser.py  test_florence2_searchtag_tagger.py  test_florence2_tagger.py  test_florence2_tuning.py  test_graph.py  test_image_index_repository.py  test_ingestion_service.py  test_main.py  test_paligemma2_tagger.py  test_query_normalizer.py  test_search_service.py  test_svg_asset_converter.py  test_tag_preview_service.py  test_tagger_registry.py  test_tagger_server.py  test_tagging_service.py  test_white_background_asset_converter.py
(+24 files in other folders)
