[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-finder"
version = "0.1.0"
description = "Minimal LangGraph scaffold for doc-finder"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "langgraph>=1.0,<2.0",
    "psycopg[binary]>=3.2,<4.0",
    "pyyaml>=6.0,<7.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
