[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-finder"
version = "0.1.0"
description = "Gemma/Ollama image tagger API and asset preprocessing tools"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "cairosvg>=2.7,<3.0",
    "fastapi>=0.115,<1.0",
    "pillow>=10.0,<13.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
